--- a/src/components/TestSlide/testslide.scss
+++ b/src/components/TestSlide/testslide.scss
@@ -1,7 +1,5 @@
 .test-slide {
-  height: 421px;
-  // width: 500px;
-  // width: 100% !important;
+  height: 100%;
   transition: 0.5s;
   padding: 30px 20px 115px 40px;
   position: relative;
@@ -13,8 +11,9 @@
   // transform: perspective(900px) rotate3d(0, -2, 3, -19deg);
   .test-slide__brand-logo {
     position: relative;
-    width: 100%;
+    // width: 100%;
     height: 100%;
+    
     transition: 1s;
     img {
       position: absolute;
@@ -22,7 +21,7 @@
       right: 0;
       padding: 0px;
       height: 150%;
-      @media screen and (max-width: 1586px) { 
+      @media screen and (max-width: 1586px) {
         height: 177%;
       }
     }
