--- a/src/components/LK/LKContent/LKDonate/lkdonate.scss
+++ b/src/components/LK/LKContent/LKDonate/lkdonate.scss
@@ -23,7 +23,7 @@
     max-width: 433px;
     width: 100%;
     height: 280px;
-    background-image: url("../../../../assets/img/lkBg.png");
+    background-image: url("../../../../assets/img/lkBg.svg");
     background-repeat: no-repeat;
     background-size: cover;
     // background: #2c2c2c;
