--- a/src/pages/questions.scss
+++ b/src/pages/questions.scss
@@ -410,7 +410,11 @@
     flex-direction: column;
 
     position: relative;
-
+    .run {
+      font-size: 40px;
+      margin: auto;
+      text-align: center;
+    }
     .questions-page__countdown-counter {
       height: 250px;
       // overflow: hidden;
@@ -422,7 +426,6 @@
         height: 250px;
         justify-content: center;
         margin: auto;
-        // position: absolute;
         -webkit-perspective: 600px;
         -moz-perspective: 600px;
         -o-perspective: 600px;
