--- a/src/pages/questions.scss
+++ b/src/pages/questions.scss
@@ -402,18 +402,23 @@
     display: flex;
     margin: auto;
     font-weight: bold;
-    font-size: 250px;
-    line-height: 99.12%;
     text-align: center;
     color: #000000;
     display: flex;
     flex-direction: column;
 
     position: relative;
+    li {
+      font-size: 250px;
+      line-height: 99.12%;
+    }
     .run {
       font-size: 40px;
       margin: auto;
       text-align: center;
+      @media screen and (max-width: 767px) {
+        font-size: 20px;
+      }
     }
     .questions-page__countdown-counter {
       height: 250px;
@@ -433,6 +438,7 @@
         &:hover {
           transform: rotate3d(100px, 0, 0);
         }
+
         div {
           width: 50px;
           height: 100%;
@@ -455,6 +461,21 @@
             // transform: translateX(85%);
             p {
               transform: translateX(-201%);
+            }
+          }
+        }
+      }
+    }
+    @media screen and (max-width: 767px) {
+      .questions-page__countdown-counter {
+        height: 120px;
+        li {
+          font-size: 120px;
+          height: 120px;
+          div {
+            width: 23px;
+            p {
+              text-align: center;
             }
           }
         }
