--- a/src/pages/rilesSlides.scss
+++ b/src/pages/rilesSlides.scss
@@ -80,12 +80,21 @@
 
   .rules-slide__img-container {
     background: #dadada;
-    height: 566px;
+    // height: 566px;
     border-radius: 10px;
+    display: flex;
+    align-items: center;
+    
+    video {
+      height: 100%;
+      width: 100%;
+      margin: auto;
+      border-radius: 10px;
+    }
   }
   @media screen and (max-width: 670px) {
     .rules-slide__img-container {
-      height: 440px;
+      // height: 440px;
     }
   }
 }
