--- a/src/pages/brand.scss
+++ b/src/pages/brand.scss
@@ -1,6 +1,4 @@
 .brand-page {
-
-
   min-height: 100vh;
   .helped-container {
     height: 100%;
@@ -144,6 +142,9 @@
     margin: 5px;
     text-align: center;
     align-items: center;
+  }
+  .brand-page__time {
+    margin-right: 15px;
   }
 }
 .brand-page__info {
