--- a/src/pages/rilesSlides.scss
+++ b/src/pages/rilesSlides.scss
@@ -84,11 +84,14 @@
     border-radius: 10px;
     display: flex;
     align-items: center;
-    
+
     video {
       height: 100%;
       width: 100%;
       margin: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       border-radius: 10px;
     }
   }
