--- a/src/pages/test.scss
+++ b/src/pages/test.scss
@@ -245,11 +245,16 @@
   }
   .swiper-container {
     padding: 120px 55px;
+    padding-bottom: 10px;
     @media screen and (max-width: 1586px) {
       padding: 80px 60px;
+      padding-bottom: 0;
+      padding-bottom: 10px;
     }
     @media screen and (max-width: 1230px) {
       padding: 80px 15px;
+      padding-bottom: 0;
+      padding-bottom: 10px;
     }
   }
   .swiper {
@@ -325,7 +330,7 @@
     justify-content: center;
     width: 100%;
     align-items: center;
-    margin-top: 40px;
+    // margin-top: 40px;
     .swiper-pagination-bullet {
       height: 20px;
       width: 20px;
