--- a/src/pages/test.scss
+++ b/src/pages/test.scss
@@ -330,7 +330,7 @@
     justify-content: center;
     width: 100%;
     align-items: center;
-    // margin-top: 40px;
+    margin-top: 40px;
     .swiper-pagination-bullet {
       height: 20px;
       width: 20px;
