--- a/src/pages/login.scss
+++ b/src/pages/login.scss
@@ -2,7 +2,7 @@
   .page-auth__content {
     min-height: 89vh;
     @media screen and (max-width: 1525px) {
-      max-width: 1170px;
+      // max-width: 1170px;
       min-height: 66vh;
     }
   }
