--- a/src/components/SelectCard/selectcard.scss
+++ b/src/components/SelectCard/selectcard.scss
@@ -9,7 +9,7 @@
     list-style: none;
     width: 84px;
     height: 56px;
-    background: #ffffff;
+    background-color: #ffffff;
     border: 0.8px solid rgba(218, 218, 218, 0.6);
     box-sizing: border-box;
     border-radius: 5px;
@@ -20,7 +20,7 @@
     background-position: center;
     background-size: contain;
     &:hover {
-      background: #dadada;
+      background-color: #dadada;
       border: none;
       background-repeat: no-repeat;
       background-position: center;
@@ -34,6 +34,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    background-color: #dadada;
     box-shadow: inset 0.622222px 0.622222px 1.24444px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
   }
