--- a/src/pages/questions.scss
+++ b/src/pages/questions.scss
@@ -610,6 +610,7 @@
   flex-direction: column;
   align-items: center;
   padding-top: 59px;
+
   .ant-progress-text {
     color: white !important;
     font-weight: 600;
@@ -619,12 +620,19 @@
     letter-spacing: 0.143099px;
 
     color: #ffffff;
+    @media screen and (max-width: 767px) {
+      font-size: 10px !important;
+    }
   }
   .questions__timer {
     width: 115px;
     height: 115px;
     // background-color: red;
     margin-bottom: 50px;
+    @media screen and (max-width: 767px) {
+      height: 45px;
+      width: 45px;
+    }
   }
   .questions__save {
     top: 76px;
@@ -738,6 +746,7 @@
     }
     @media screen and (max-width: 1553px) {
       justify-content: space-around;
+      width: 78%;
       .questions__btn-wrapper {
         width: 45%;
       }
@@ -747,6 +756,7 @@
     }
     @media screen and (max-width: 767px) {
       flex-direction: column;
+      width: 100%;
       flex-wrap: nowrap;
       align-items: center;
       justify-content: center;
@@ -766,6 +776,13 @@
         margin-bottom: 10px;
         font-size: 20px;
       }
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    .ant-progress-inner {
+      height: 44px !important;
+      width: 44px !important;
     }
   }
 }
