--- a/src/pages/faq.scss
+++ b/src/pages/faq.scss
@@ -96,6 +96,9 @@
         width: 48px;
         height: 48px;
         padding: 0;
+        svg {
+          margin: 12px;
+        }
       }
       .ant-collapse-item-active .ant-collapse-header {
         color: #17ca9b;
